API-Reservaciones/api-reservaciones-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-reservaciones
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: api-reservaciones.2db5f954f43042069dae.eastus.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: api-reservaciones
            port: 
              number: 9000
